syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.scu.distributed.server.services";

service TopicService {
  rpc subscribeToTopic (SubscribeRequest) returns (Status) {}
  rpc publishMessage (Message) returns (Status) {}
  rpc getMessages (GetMessageRequest) returns (Status) {}
}

message SubscribeRequest {
  string ipAddress = 1;
  string port = 2;
  string topic = 3;
}

message GetMessageRequest {
  string name = 1;
  string ipAddress = 2;
  string port = 3;
}

message Message {
  string data = 1;
  string topic = 2;
  string sender = 3;
  int32 receiverPort = 4;
  bool replicate = 5;
}

message MessageList{
  repeated Message messages = 1;
}

message Status {
  string value = 1;
}