syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.scu.distributed.server.leaderelection";

service LeaderElectionService {
  rpc leader (Empty) returns (Leader) {}
  rpc onHeartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
  rpc onRequestVote(VoteRequest) returns (VoteResponse) {}
}

message Leader {
  string memberId = 1;
  string leaderId = 2;
}

message HeartbeatRequest {
  bytes term = 1;
  string memberId = 2;
}

message HeartbeatResponse {
  bytes term = 1;
  string memberId = 2;
}


message VoteRequest {
  bytes term = 1;
  string candidateId = 2;
}

message VoteResponse {
  bool granted = 1;
  string candidateId = 2;
}

message Empty{

}